--- a/style.css
+++ b/style.css
@@ -1,6 +1,23 @@
+
+body{
+  padding: 0;
+ margin: 0;
+}
+
+main{
+  padding: 50px 0;
+  margin: 5% auto;
+  width: 50%;
+  }
+
 h1 {
   font-size: 25px;
   text-align: center;
+}
+
+.list-display {
+  border: 2px solid black;
+  border-radius: 5px;
 }
 
 ul {
@@ -8,16 +25,15 @@ ul {
   text-transform: capitalize;
   display: flex;
   flex-direction: column;
-  border: 2px solid black;
-  border-radius: 5px;
   padding: 5px;
 }
+
 ul li {
   font-size: 17px;
   text-align: left;
   display: flex;
   justify-content: space-between;
-  padding: 10px auto;
+  padding: 10px;
   border-radius: 5px;
 }
 
@@ -31,6 +47,11 @@ ul li button {
   color: white;
 }
 
+hr{
+  margin-top: 20px;
+  width: 50%;
+}
+
 form {
   text-align: center;
 }
@@ -39,10 +60,12 @@ form input {
   border: 1px solid gray;
   padding: 4px 6px;
   border-radius: 3px;
+  width: 50%;
 }
 
 form button {
   margin-left: 35%;
+  width: 60px;
   background-color: #37d547;
   color: white;
   border-radius: 5px;
