--- a/style.css
+++ b/style.css
@@ -6,22 +6,31 @@ body {
 nav {
   display: flex;
   justify-content: space-around;
+  -webkit-box-shadow: 0 0 30px 3px #6a69696d;
+    box-shadow: 0 0 30px 3px #65616163;
 }
 
-nav ul {
+nav .nav-lists {
   display: flex;
   flex-direction: row;
 }
 
-nav ul li {
+nav .nav-lists .nav-item {
   font-size: 23px;
+  text-align: left;
+  display: flex;
+  justify-content: space-between;
+  padding: 10px;
+  border-radius: 5px;
 }
 
-main {
-  padding: 50px 0;
-  margin: 5% auto;
-  width: 50%;
+nav .nav-lists .nav-item:hover{
+  cursor: pointer;
+  transform: translateX(1px);
+  text-decoration: underline;
+  background-color: #f2dcb3;
 }
+
 
 nav .active {
   color: rgb(223, 145, 9);
@@ -32,13 +41,29 @@ nav .active {
   display: none;
 }
 
+main {
+  padding: 50px 0;
+  margin: 5% auto;
+  width: 50%;
+}
+
 .display {
   display: contents;
 }
 
-h1 {
-  font-size: 25px;
+.localTime{
+  position: fixed;
+  top: 90px;
+  right: 30px;
+}
+h1,
+h2{
   text-align: center;
+}
+
+h1,
+h2 {
+  font-size: 40px;
 }
 
 .list-display {
@@ -46,7 +71,7 @@ h1 {
   border-radius: 5px;
 }
 
-ul {
+.sections .book-display {
   list-style: none;
   text-transform: capitalize;
   display: flex;
@@ -54,7 +79,7 @@ ul {
   padding: 5px;
 }
 
-ul li {
+.book-display .book-list {
   font-size: 17px;
   text-align: left;
   display: flex;
@@ -65,11 +90,6 @@ ul li {
 
 .book-list:nth-child(odd) {
   background-color: rgb(199, 195, 195);
-}
-
-hr {
-  margin-top: 20px;
-  width: 50%;
 }
 
 form {
@@ -96,4 +116,13 @@ ul li button {
   background-color: hsl(0, 70%, 48%);
   border-radius: 5px;
   color: white;
+}
+
+footer{
+  width: 100%;
+  position: fixed;
+  bottom: 0;
+  padding-left: 50px;
+  -webkit-box-shadow: 0 0 30px 3px #6a69696d;
+    box-shadow: 0 0 30px 3px #65616163;
 }
